--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Matthelosh</title>
+	<link rel="stylesheet" href="assets/main.css">
 </head>
 <body>
 	<h1>Bismillah</h1>
