--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Matthelosh</title>
 	<link rel="stylesheet" href="assets/main.css">
+	<style>
+		body{
+			background: #796798;
+		}
 </head>
 <body>
 	<h1>Bismillah</h1>
