--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 	<style>
 		body{
 			background: #796798;
+			color: #efefef;
+		}
+		.wrap > header {
+			text-align: center;
 		}
 </head>
 <body>
-	<h1>Bismillah</h1>
+	<div class="wrap">
+		<header>
+			<h2>SALAM</h2>
+			<p>Perkenalkan, nama saya Muhammad Soleh</p>
+		</header>
+	</div>
 </body>
 </html>
