--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
 			<p>Perkenalkan, nama saya Muhammad Soleh</p>
 		</header>
 	</div>
+	
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </body>
 </html>
