--- a/info/info-remidi.html
+++ b/info/info-remidi.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <title></title>
+    <title>Info Remidi PAI</title>
     <meta content="">
     <style></style>
   </head>
-  <body></body>
+  <body>
+    <h1>Informasi Remidi</h1>
+  </body>
 </html>
